--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -36,4 +36,33 @@
 		}
 	}
 }
+.pag-left {
+	display: inline-block;
+	.select-pagination {
+		display: inherit;
+    width: 100px;
+    margin: 0 10px;
+	}
+}
+.pag-right {
+	float: right;
+}
 /*End table*/
+
+/*Start Nav*/
+ul.nav-dropdown-items {
+	.nav-icon {
+		display: none !important;
+	}
+}
+.sidebar {
+	.nav-dropdown-items {
+		.nav-link {
+			padding-left: 2.2rem;
+		}
+	}
+	.nav-link {
+		padding: 0.75rem 0.6rem;
+	}
+}
+/*End Nav*/  
