--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -66,3 +66,25 @@ ul.nav-dropdown-items {
 	}
 }
 /*End Nav*/  
+
+/*Start Fee manager*/
+.gp-add-fee {
+	padding: 15px;
+	box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.1);
+	margin-bottom: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+.card-header {
+	.text-bold {
+		font-size: 18px;
+		font-weight: 700;
+	}
+}
+.permission-title {
+	margin-left: 1.25rem;
+}
+.form-submit {
+	width: 100%;
+}
+/*End manager*/ 
