--- a/src/components/FeeTableDetail/index.scss
+++ b/src/components/FeeTableDetail/index.scss
@@ -18,6 +18,7 @@
   background: #f0f1f2;
   color: #3a3f41;
   padding: 5px 0 5px 10px;
+  margin-bottom: 25px;
 }
 .widget-header>.widget-title {
   line-height: 25px;
